--- a/todos_app/src/App.css
+++ b/todos_app/src/App.css
@@ -28,11 +28,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  width: 520px;
+  width: 90%;
+  max-width: 520px;
   min-height: 600px;
   background: #161a2b;
   text-align: center;
-  margin: 128px auto;
+  margin: 64px auto;
   border-radius: 10px;
   padding-bottom: 32px;
 }
@@ -48,16 +49,18 @@ h1 {
   opacity: 0.4;
 }
 
+
 .todo-form {
   margin-bottom: 32px;
 }
 
 .todo-input {
-  padding: 14px 32px 14px 16px;
+  padding: 14px 16px;
   border-radius: 4px 0 0 4px;
   border: 2px solid #553f91;
   outline: none;
-  width: 320px;
+  width: 100%;
+  max-width: 320px;
   background: transparent;
   color: #fff;
 }
@@ -162,7 +165,8 @@ h1 {
   border-radius: 4px 0 0 4px;
   border: 2px solid #553f91;
   outline: none;
-  width: 405px;
+  width: 100%;
+  max-width: 405px;
   background: transparent;
   color: #fff;
   margin-bottom: 16px;
@@ -213,4 +217,25 @@ h1 {
 
 .social-links a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .todo-app {
+    margin: 32px auto;
+  }
+
+  .todo-input,
+  .search-input {
+    width: 50%;
+    max-width: none;
+  }
+
+  .todo-row {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .icons {
+    margin-top: 10px;
+  }
 }
