--- a/todos_app/src/Components/Footer.css
+++ b/todos_app/src/Components/Footer.css
@@ -1,10 +1,9 @@
-
 .footer {
   background-color: #161a2b;
   color: #fff;
   padding: 20px;
   text-align: center;
-  border-top: 1px solid #553f91;
+  border-top: 5px solid rgb(130, 111, 180);
 }
 
 .footer-content {
@@ -18,6 +17,7 @@
   height: 100px;
   border-radius: 50%;
   margin-bottom: 10px;
+  box-shadow: 0 0 30px rgb(166, 131, 255);
 }
 
 .social-links {
@@ -32,4 +32,23 @@
 
 .social-links a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 10px;
+  }
+
+  .footer-photo {
+    width: 80px;
+    height: 80px;
+  }
+
+  .social-links {
+    margin-top: 5px;
+  }
+
+  .social-links a {
+    margin: 0 5px;
+  }
 }
