--- a/todos_app/src/App.css
+++ b/todos_app/src/App.css
@@ -41,7 +41,7 @@ body {
 h1 {
   margin: 32px 0;
   color: #fff;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .complete {
@@ -107,7 +107,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 4px auto;
+  margin: 10px auto;
   color: #fff;
   background: linear-gradient(
     90deg,
@@ -115,7 +115,7 @@ h1 {
     rgba(255, 84, 17, 1) 100%
   );
 
-  padding: 16px;
+  padding: 10px;
   border-radius: 5px;
   width: 90%;
 }
@@ -219,13 +219,30 @@ h1 {
   text-decoration: underline;
 }
 
+.button_expand {
+  padding: 5px;
+  border: none;
+  border-radius: 4px 4px 4px 4px;
+  cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    180deg,
+    #261555 0%,
+    #553f91 100%
+  );
+  color: #ffffff;
+  text-transform: capitalize;
+}
+
 @media (max-width: 768px) {
   .todo-app {
     margin: 32px auto;
   }
+  .search-input{
+    width: 69%;
+  }
 
-  .todo-input,
-  .search-input {
+  .todo-input {
     width: 50%;
     max-width: none;
   }
